k8s/saemate/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saemate-api
  namespace: saemate
spec:
  selector:
    app: saemate-api
  ports:
    - port: 4000
      targetPort: 4000
