k8s/saemate/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saemate-api
  namespace: saemate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.saemate.json-server.win
      secretName: saemate-api-tls
  rules:
    - host: api.saemate.json-server.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saemate-api
                port:
                  number: 4000
